Adicionar e modificar textos.

--- a/profile.html
+++ b/profile.html
@@ -13,10 +13,11 @@
         <section>
             <h2>Sobre mim</h2>
             <img src="minha_foto.jpg" alt="Minha foto" width="200px" height="200px">
-            <p>Me chamo Martin Dambrowski Stabel Garrote, tenho 18 anos e nasci em Blumenau.</p>
-            <p>No ensino médio com curso técnico em informática integrado, que cursei no IFC campus Blumenau, descobri meu interesse pela área de programação e aprendi sobre Python, JavaScript, HTML e CSS</p>
-            <p>Atualmente estou participando do programa +Devs2Blu, onde já aprendi sobre Java, PostgreSQL, etc.</p>
-            <p></p>
+            <p>Sou Martin Dambrowski Stabel Garrote, tenho 18 anos, nasci e resido em Blumenau - SC</p>
+            <p>Cursei técnico em informática integrado ao ensino médio no Instituto Federal Catarinense campus Blumenau. Foi onde descobri meu interesse pela área de programação e aprendi sobre Python, Flask, JavaScript, JQuery, HTML e CSS.</p>
+            <p>Com os conhecimentos que adquiri pude desenvolver alguns projetos pessoais para concretizar e expandir meu aprendizado, eles estão disponíveis no meu <a href="https://github.com/martingarrote/">GitHub</a>.</p>
+            <p>Atualmente estou participando do programa +Devs2Blu, onde já aprendi sobre Java, Git, metodologias agéis e PostgreSQL</p>
+            <p>Ainda não tive experiências profisionais na área, no entanto pretendo ir desenvolvendo projetos pessoais para aplicar o meu aprendizado e também aprender coisas novas.</p>
         </section>
         <section>
             <h2>Conhecimentos</h2>
