--- a/profile.html
+++ b/profile.html
@@ -2,67 +2,71 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
     <title>Meu Perfil</title>
 </head>
 <body>
     <header>
         <h1>Meu Perfil</h1>
     </header>
-    <hr>
     <main>
         <section>
             <h2>Sobre mim</h2>
             <img src="minha_foto.jpg" alt="Minha foto" width="200px" height="200px">
-            <p>Sou Martin Dambrowski Stabel Garrote, tenho 18 anos, nasci e resido em Blumenau - SC</p>
-            <p>Cursei técnico em informática integrado ao ensino médio no Instituto Federal Catarinense campus Blumenau. Foi onde descobri meu interesse pela área de programação e aprendi sobre Python, Flask, JavaScript, JQuery, HTML e CSS.</p>
+            <p>Sou <strong>Martin Dambrowski Stabel Garrote</strong>, tenho 18 anos, nasci e resido em Blumenau - SC</p>
+            <p>Cursei técnico em informática integrado ao ensino médio no Instituto Federal Catarinense campus Blumenau. Foi onde descobri meu interesse pela área de programação e aprendi sobre <strong>Python</strong>, <strong>Flask</strong>, <strong>JavaScript</strong>, <strong>JQuery</strong>, <strong>HTML</strong> e <strong>CSS</strong>.</p>
             <p>Com os conhecimentos que adquiri pude desenvolver alguns projetos pessoais para concretizar e expandir meu aprendizado, eles estão disponíveis no meu <a href="https://github.com/martingarrote/">GitHub</a>.</p>
-            <p>Atualmente estou participando do programa +Devs2Blu, onde já aprendi sobre Java, Git, metodologias agéis e PostgreSQL</p>
+            <p>Atualmente estou participando do programa <strong>+Devs2Blu</strong>, onde já aprendi sobre <strong>Java</strong>, <strong>Git</strong>, <strong>metodologias agéis</strong> e <strong>PostgreSQL</strong></p>
             <p>Ainda não tive experiências profisionais na área, no entanto pretendo ir desenvolvendo projetos pessoais para aplicar o meu aprendizado e também aprender coisas novas.</p>
         </section>
         <section>
             <h2>Conhecimentos</h2>
             <p>Abaixo estão alguns dos meus conhecimentos:</p>
-                <table>
-                    <tr>
-                        <th>Linguagem</th>
-                        <th>Nivel</th>
-                    </tr>
-                    <tr>
-                        <td>Java</td>
-                        <td>Básico</td>
-                    </tr>
-                    <tr>
-                        <td>HTML</td>
-                        <td>Básico</td>
-                    </tr>
-                    <tr>
-                        <td>CSS</td>
-                        <td>Básico</td>
-                    </tr>
-                    <tr>
-                        <td>JavaScript</td>
-                        <td>Básico</td>
-                    </tr>
-                    <tr>
-                        <td>Python</td>
-                        <td>Básico</td>
-                    </tr>
-                </table>
+            <table>
+                <tr>
+                    <th>Linguagem</th>
+                    <th>Nivel</th>
+                </tr>
+                <tr>
+                    <td>Java</td>
+                    <td>Básico</td>
+                </tr>
+                <tr>
+                    <td>HTML</td>
+                    <td>Básico</td>
+                </tr>
+                <tr>
+                    <td>CSS</td>
+                    <td>Básico</td>
+                </tr>
+                <tr>
+                    <td>JavaScript</td>
+                    <td>Básico</td>
+                </tr>
+                <tr>
+                    <td>Python</td>
+                    <td>Básico</td>
+                </tr>
+            </table>
         </section>
         <section>
             <h2>Formas de contato</h2>
             <p>Abaixo estão os links das minhas redes sociais:</p>
             <p>Você também pode fazer contato por email através do email <b>dsmartingarrote@gmail.com</b></p>
-            <ul>
-                <li><a href="https://linkedin.com/in/martingarrote">LinkedIn</a></li>
-                <li><a href="https://github.com/martingarrote">GitHub</a></li>
-                <li><a href="https://instagram.com/martindsgarrote">Instagram</a></li>
-            </ul>
+            <div class="contacts">
+                <div class="contacts">
+                    <ul>
+                        <li><a href="https://linkedin.com/in/martingarrote">LinkedIn</a></li>
+                        <li><a href="https://github.com/martingarrote">GitHub</a></li>
+                        <li><a href="https://instagram.com/martindsgarrote">Instagram</a></li>
+                    </ul>
+                </div>
+                
+            </div>
         </section>
     </main>
-    <hr>
     <footer>
-        <p>2023</p>
+        <p>&#9400; 2023 Martin Garrote</p>
     </footer>
 </body>
 </html>
