Implementar mais exercícios

--- a/exercicios/js/exercicios_javascript.html
+++ b/exercicios/js/exercicios_javascript.html
@@ -38,9 +38,29 @@
             <button onclick="formatarTelefone()">5. Formatar telefone</button>
         </section>
         <hr>
+        <section>
+            <h2>Desafio 4</h2>
+            <button onclick="exibirPares()">1. Exibir pares do 1 ao 10</button><br>
+            <button onclick="calcularMediaValidado()">2. Média aritmética com validação</button><br>
+            <button onclick="contagemRegressiva()">3. Contagem regressiva</button><br>
+            <button onclick="buscarLetra()">4. Procurar por letra</button><br>
+            <button onclick="deixarFraseMaiuscula()">5. Deixar frase maiúscula</button><br>
+            <button onclick="exibirImpares()">6. Exibir ímpares do 1 ao 20</button><br>
+            <button onclick="calcularMediaVetorDecimais()">7. Calcular média vetor</button><br>
+            <button onclick="jogoAdivinha()">8. Jogo de adivinha de número</button><br>
+            <button onclick="somarVetorInteiros()">9. Somar valores de um vetor de inteiros</button><br>
+            <button onclick="fibonacci()">10. Fibonacci</button><br>
+            <button onclick="acharMaiorNumero()">11. Achar maior número</button><br>
+            <button onclick="validarSenha()">12. Validar senha</button><br>
+            <button onclick="contarLetraA()">13. Contar ocorrência da letra A</button><br>
+            <button onclick="">14. </button><br>
+            <button onclick="">15. </button><br>
+        </section>
+        <hr>
     </main>
     <script src="desafio1.js"></script>
     <script src="desafio2.js"></script>
     <script src="desafio3.js"></script>
+    <script src="desafio4.js"></script>
 </body>
 </html>
