--- a/exercicios/js/exercicios_javascript.html
+++ b/exercicios/js/exercicios_javascript.html
@@ -53,8 +53,8 @@
             <button onclick="acharMaiorNumero()">11. Achar maior número</button><br>
             <button onclick="validarSenha()">12. Validar senha</button><br>
             <button onclick="contarLetraA()">13. Contar ocorrência da letra A</button><br>
-            <button onclick="">14. </button><br>
-            <button onclick="">15. </button><br>
+            <button onclick="exibirNumerosPrimosAteCem()">14. Exibir números primos de 1 a 100</button><br>
+            <button onclick="somarAteCinquenta()">15. Somar números de 1 a 50</button><br>
         </section>
         <hr>
     </main>
