Ajustar coisas simples

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
     <style>
         body {
@@ -83,6 +84,13 @@
             <h2>Exercícios JavaScript</h2>
             <ul>
                 <li><a href="exercicios/js/exercicios_javascript.html">Exercícios</a></li>
+            </ul>
+        </section>
+        <hr>
+        <section>
+            <h2>Desafio consulta de CEP</h2>
+            <ul>
+                <li><a href="exercicios/desafio_cep/cep.html">Consulta de CEP</a></li>
             </ul>
         </section>
     </main>
