Adicionar funcionalidade para consultar CEP

--- a/exercicios/desafio_cep/cep.html
+++ b/exercicios/desafio_cep/cep.html
@@ -13,7 +13,8 @@
     <main>
         <section>
             <h2>Insira o CEP</h2>
-            <input type="text" id="cep" placeholder="CEP">
+            <input type="number" id="cep" placeholder="CEP">
+            <span id="erro"></span>
 
             <h2>Informações</h2>
             <input type="text" id="rua" class="visualizar" placeholder="Rua" readonly>
@@ -23,5 +24,7 @@
             <input type="text" id="estado" class="visualizar" placeholder="Estado" readonly>
         </section>
     </main>
+
+    <script src="script.js"></script>
 </body>
 </html>
