Avançar no desenvolvimento do protótipo

--- a/exercicios/desafio_paises/paises.html
+++ b/exercicios/desafio_paises/paises.html
@@ -19,7 +19,10 @@
         </section>
         <section>
             <h2>Informações do país</h2>
-            <div id="countries-info"></div>
+            <div class="countries">
+                <div class="flag"></div>
+                <div class="info"></div>
+            </div>
         </section>
     </main>
     <script src="script.js"></script>
