Organizar HTMl e CSS e finalizar protótipo do js

--- a/exercicios/desafio_paises/paises.html
+++ b/exercicios/desafio_paises/paises.html
@@ -21,7 +21,8 @@
             <h2>Informações do país</h2>
             <div class="countries">
                 <div class="flag"></div>
-                <div class="info"></div>
+                <div class="info">
+                </div>
             </div>
         </section>
     </main>
