Ajustar problema na inserção de dados e adicionar link para consulta de paises

--- a/index.html
+++ b/index.html
@@ -88,9 +88,10 @@
         </section>
         <hr>
         <section>
-            <h2>Desafio consulta de CEP</h2>
+            <h2>Desafios</h2>
             <ul>
                 <li><a href="exercicios/desafio_cep/cep.html">Consulta de CEP</a></li>
+                <li><a href="exercicios//desafio_paises/paises.html">Informações país</a></li>
             </ul>
         </section>
     </main>
