--- a/exercicios/desafio_paises/paises.html
+++ b/exercicios/desafio_paises/paises.html
@@ -18,7 +18,7 @@
             </select>
         </section>
         <section>
-            <h2>Informações do país</h2>
+            <h2 style="display: none">Informações do país</h2>
             <div class="countries">
                 <div class="flag"></div>
                 <div class="info">
