--- a/exercicios/ravin/index.html
+++ b/exercicios/ravin/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>Ravin</h1>
+        <h1 style="margin: 0px;">Ravin</h1>
     </header>
     <div class="container">
         <nav>
@@ -21,12 +21,14 @@
         </nav>
         <main>
             <section>
-                <h2>Oi</h2>
+                <h2 id="proucts-header">Produtos</h2>
+                <div class="products"></div>
             </section>
         </main>
     </div>
     <footer>
-        <p>&#9400; Ravin 2023</p>
+        <p style="margin: 0px;">&#9400; Ravin 2023</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
